--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,10 @@ authors = [{ name = "Michael Booth", email = "michael@databooth.com.au" }]
 requires-python = ">=3.13"
 dependencies = [
     "cython>=3.1.2",
+    "duckdb>=1.3.2",
+    "logfire>=4.3.3",
     "numpy>=2.3.2",
+    "pandas>=2.3.1",
     "plotly>=6.2.0",
     "pybind11>=3.0.0",
     "pyperf>=2.9.0",
